# yew_icons

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  docs  generated_feature_flags.txt  svgo.config.js
.github/workflows/: cd.yml
docs/: index-2b7a025380812f95.js  index-50346d472091e74a.js  index-62293c6d1a35f76d.js  index-6dc869d8729cb55f.js  index-70ce08924c322507.js  index-925fbb72f3b2ec98.js  index-b9864ffa902bac54.js  index-c298c28ae95b7747.js  index-c8c599c95da296d9.js  index-df33c074ee4c3aca.js  index-ef117c617487ffe0.js  index.html  loadingIndicator.js  main-32ce0388441b71ed.css  main-6242f26de061ce22.css  main-b800a12eba8e86d3.css  main-d5d1a116818c87ed.css  main.css  scroll_to_top.css  switch-5714e5759034c6a8.css  switch-eb58325ab41d310d.css  test-app-18b15c0947515965.js  test-app-3bcd434714bc5fce.js  test-app-497810f91403ae09.js  test-app-7938ead73250c200.js  test-app-91d307c5ea42f873.js  test-app-94ce62097ca3e7e2.js  test-app-b279c6c33cbef472.js  test-app-b66cb612f3cdacf0.js  test-app-cf40b9964f1b7a4c.js  test-app-d837447770a4e412.js  test-app.js
src/: generated.rs  generator.rs  lib.rs
test-app/: .gitignore  Cargo.toml  Trunk.prod.toml  Trunk.toml  index.html
test-app/src/: main.rs
test-app/src/components/: gallery.rs  header.rs  mod.rs  scroll_to_top.rs  theme_toggle.rs
test-app/styles/: main.scss  scroll_to_top.scss  switch.scss
