[package]
name = "yew_icons"
license = "MIT"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "generator"
path = "src/generator.rs"
required-features = ["generator"]

[features]
feather = []
font_awesome_regular = []
font_awesome_solid = []
octicons = []
generator = ["quote", "convert_case", "proc-macro2", "regex"]
iterate_icon_id = ["enum-iterator"]
#testing = ["yew/ssr", "iterate_icon_id"]

[dependencies]
yew = {version = "0"} #git = "https://github.com/yewstack/yew"}
quote = {version = "1.0", optional = true}
convert_case = {version = "0.5", optional = true}
proc-macro2 = {version = "1.0", optional = true}
enum-iterator = {version = "0.7", optional = true}
regex = {version = "1", optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}