[package]
name = "yew_icons"
authors = ["Finn Bear"]
license = "MIT"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/finnbear/yew_icons/"
description = "Easily include a variety of SVG icons into your Yew app"
exclude = [
    "/bootstrap",
    "/feather",
    "/Font-Awesome",
    "/heroicons",
    "/octicons",
    "/lipis-flag-icons",
    "/lucide",
    "/simple-icons",
    "/extra",
    "/docs",
    "/test-app",
    "svgo.config.js"
]

[[bin]]
name = "generator"
path = "src/generator.rs"
required-features = ["_generator"]

[dependencies]
yew = { version = "0.22", features = [
    "csr",
] } #git = "https://github.com/yewstack/yew"}
quote = { version = "1.0", optional = true }
convert_case = { version = "0.5", optional = true }
proc-macro2 = { version = "1.0", optional = true }
enum-iterator = { version = "0.7", optional = true }
rayon = { version = "1.8.1", optional = true }
regex = { version = "1", optional = true }
tempfile = { version = "3.0.2", optional = true }
base64 = { version = "0.13", optional = true }
indicatif = { version = "0.18.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
_generator = ["quote", "convert_case", "proc-macro2", "regex", "base64", "tempfile", "rayon", "indicatif"]
_enumerate_icon_data = []
_testing = ["yew/ssr", "_enumerate_icon_data"]
bootstrap = []
extra = []
feather = []
font_awesome_regular = []
font_awesome_solid = []
heroicons_mini_solid = []
heroicons_outline = []
heroicons_solid = []
lipis_flag_icons_1_x_1 = []
lipis_flag_icons_4_x_3 = []
lucide = []
octicons = []
simple_icons = []
