[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
incremental = true

[dependencies]
yew = { version = "0" }
enum-iterator = "0.7"
web-sys = { version = "0", features = [
    "Clipboard",
    "Navigator",
    "HtmlInputElement",
] }
log = "0.4"
wasm-logger = "0.2"

# Note: This dependency is specific to the test app, because it contains the `path = ".."` attribute. In your own project,
# you must omit that attribute e.g. import `yew_icons = {version = "0.1.1", features = ["FeatherArrowDownCircle"]}`.
# That way, cargo will download the crate instead of looking in a directory where it doesn't exist.
yew_icons = { path = "..", features = [
    "iterate_icon_id",
    "bootstrap",
    "font_awesome_regular",
    "font_awesome_solid",
    "heroicons_solid",
    "heroicons_outline",
    "heroicons_mini_solid",
    "lucide",
    "octicons",
    "FeatherArrowDownCircle",
    "FeatherArrowLeftCircle",
    "FeatherArrowRightCircle",
    "FeatherArrowUpCircle",
    "LipisFlagIcons4X3Us",
    "LipisFlagIcons4X3Ca",
    "LipisFlagIcons4X3Gb",
    "LipisFlagIcons4X3Cn",
    "LipisFlagIcons4X3Es",
    "LipisFlagIcons4X3Ru",
    "LipisFlagIcons4X3Vn",
    "LipisFlagIcons4X3De",
    "LipisFlagIcons4X3Jp",
    "LipisFlagIcons4X3Fr",
    "LipisFlagIcons4X3In",
    "LipisFlagIcons4X3Ee",
    "LipisFlagIcons4X3It",
    "SimpleIconsAskubuntu",
    "SimpleIconsLinux",
    "SimpleIconsWebassembly",
] }